<resources>
    <string name="app_name">Story App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Story App</string>
    <string name="nav_header_subtitle">firman.mardiyanto@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">Story List</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="loading_with_dot">Loading...</string>
    <string name="welcome_with_name">Welcome, %1$s</string>
    <string name="login">Login</string>
    <string name="not_granted_permission">Permissions not granted by the user.</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="required_description">Description required</string>
    <string name="posting_with_dot">Posting...</string>
    <string name="post">Post</string>
    <string name="please_select_a_picture">Please select a picture</string>
    <string name="register_success">Register Success, Please Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="touched_view_with_id">Touched view: %1$s</string>
    <string name="empty_data">Empty data</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_here">Register here</string>
    <string name="add_story">Add Story</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="post_story">Post Story</string>
    <string name="descriptions">Descriptions</string>
    <string name="story_has_posted">Story has posted</string>
    <string name="post_new_story">Post New Story</string>
    <string name="story_image">Story Image</string>
    <string name="add_story_floating_button">Add Story Floating Button</string>
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">Maps</string>
    <string name="current_location">Current Location : %1$s</string>
    <string name="retry">Retry</string>
</resources>